Bug 29089 - Words substituted for %s in a sentence can not be translated
Summary: Words substituted for %s in a sentence can not be translated
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 4.1.0
: P3 normal
Target Milestone: 4.3.0
Assignee: Not yet assigned to anyone
URL:
Keywords: diagnostic
Depends on:
Blocks:
 
Reported: 2006-09-14 20:33 UTC by Göran Uddeborg
Modified: 2006-10-29 19:58 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2006-09-14 20:40:34


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Göran Uddeborg 2006-09-14 20:33:22 UTC
In gcc/cp/typeck.c there are these messages:

pedwarn ("ISO C++ forbids %sing an enum",
         (code == PREINCREMENT_EXPR || code == POSTINCREMENT_EXPR)
	 ? "increment" : "decrement");

error ("cannot %s a pointer to incomplete type %qT",
       ((code == PREINCREMENT_EXPR
	 || code == POSTINCREMENT_EXPR)
	? "increment" : "decrement"), TREE_TYPE (argtype));

pedwarn ("ISO C++ forbids %sing a pointer of type %qT",
	 ((code == PREINCREMENT_EXPR
	   || code == POSTINCREMENT_EXPR)
	  ? "increment" : "decrement"), argtype);


Here "increment" and "decrement" will not be translated.  Composing sentences like this also makes translation hard, probably impossible in some languages.  Please make two complete separate messages for each case.
Comment 1 Andrew Pinski 2006-09-14 20:40:34 UTC
Confirmed.
Comment 2 Dirk Mueller 2006-10-29 19:53:04 UTC
Subject: Bug 29089

Author: mueller
Date: Sun Oct 29 19:52:52 2006
New Revision: 118156

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=118156
Log:
       PR c++/29089
       * typeck.c (build_unary_op): Duplicate warning message
       for easier translation.


Modified:
    trunk/gcc/cp/ChangeLog
    trunk/gcc/cp/typeck.c

Comment 3 Dirk Mueller 2006-10-29 19:58:10 UTC
Fixed for 4.3