       PR c++/29089        * typeck.c (build_unary_op): Duplicate warning message        for easier translation.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@118156 138bc75d-0d04-0410-961f-82ee72b054a4